# bigquery_patentsview

./: .gitignore  README.md  pyproject.toml
resources/metadata/beta/: table_descriptions.json  variable_descriptions.json
resources/metadata/granted/: table_descriptions.json  variable_descriptions.json
resources/metadata/pregrant/: table_descriptions.json  variable_descriptions.json
resources/patentsview_schemas/granted/: schema_g_applicant_not_disambiguated.json  schema_g_application.json  schema_g_assignee_disambiguated.json  schema_g_assignee_not_disambiguated.json  schema_g_attorney_disambiguated.json  schema_g_attorney_not_disambiguated.json  schema_g_botanic.json  schema_g_brf_sum_text.json  schema_g_claim.json  schema_g_claims.json  schema_g_cpc_current.json  schema_g_cpc_title.json  schema_g_detail_desc_text.json  schema_g_draw_desc_text.json  schema_g_examiner_not_disambiguated.json  schema_g_figures.json  schema_g_foreign_citation.json  schema_g_foreign_priority.json  schema_g_gov_interest_contracts.json  schema_g_gov_interest_org.json  schema_g_inventor_disambiguated.json  schema_g_inventor_not_disambiguated.json  schema_g_ipc_at_issue.json  schema_g_location_disambiguated.json  schema_g_location_not_disambiguated.json  schema_g_other_reference.json  schema_g_pct_data.json  schema_g_persistent_assignee.json  schema_g_persistent_inventor.json  schema_g_rel_app_text.json  schema_g_us_application_citation.json  schema_g_us_patent_citation.json  schema_g_us_rel_doc.json  schema_g_us_term_of_grant.json  schema_g_uspc_at_issue.json  schema_g_wipo_technology.json
resources/patentsview_schemas/pregrant/: schema_pg_applicant_not_disambiguated.json  schema_pg_assignee_disambiguated.json  schema_pg_assignee_not_disambiguated.json  schema_pg_brf_sum_text_{year}.json  schema_pg_claims_{year}.json  schema_pg_cpc_at_issue.json  schema_pg_cpc_current.json  schema_pg_cpc_title.json  schema_pg_detail_desc_text_{year}.json  schema_pg_draw_desc_text_{year}.json  schema_pg_foreign_priority.json  schema_pg_gov_interest.json  schema_pg_gov_interest_contracts.json  schema_pg_gov_interest_org.json  schema_pg_inventor_disambiguated.json  schema_pg_inventor_not_disambiguated.json  schema_pg_ipc_at_issue.json  schema_pg_location_disambiguated.json  schema_pg_location_not_disambiguated.json  schema_pg_pct_data.json  schema_pg_persistent_assignee.json  schema_pg_persistent_inventor.json  schema_pg_published_application.json  schema_pg_published_application_abstract.json  schema_pg_rel_app_text.json  schema_pg_us_rel_doc.json  schema_pg_uspc_at_issue.json  schema_pg_wipo_technology.json
resources/schemas/: schema_g_cpc_at_issue.json  schema_g_gov_interest.json  schema_g_patent.json  schema_g_patent_abstract.json  schema_g_us_application_citation.json  schema_pg_granted_pgpubs_crosswalk.json
src/patentsview_gbq/: __init__.py  config.py
src/patentsview_gbq/tasks/: __init__.py  task_01_download.py  task_02_extract_to_parquet.py  task_03_upload_gcs_zip.py  task_04_upload_gcs_parquet.py  task_05_metadata.py  task_06_create_bq_from_gcs.py  task_07_apply_descriptions.py  task_08_make_public.py
(+2 files in other folders)
